# STM32EmbeddedAiCoder

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml  local.example.yaml
docs/: AIDB-RFC.md  REQUIREMENTS.md
embedded_ai_coder/: __init__.py  __main__.py  app.py  cli.py  config.py  log_setup.py  main_window.py  preflight.py
embedded_ai_coder/core/: __init__.py  ai_client.py  build_heal.py  builder.py  coder.py  collector.py  docs_context.py  fault_decoder.py  filter.py  flasher.py  implement_orchestrator.py  interfaces.py  orchestrator.py  scaffolder.py  tokenbase_bridge.py
embedded_ai_coder/gui/: __init__.py  hub.py  worker.py
embedded_ai_coder/gui/pages/: __init__.py  ai_coder.py  base.py  build_flash.py  dashboard.py  fault_diag.py  history.py  log_monitor.py  project.py  settings.py
embedded_ai_coder/gui/widgets/: __init__.py  diff_view.py  log_view.py
examples/: demo_log.txt
examples/demo_project/: Makefile
examples/demo_project/docs/: firmware_spec.md
examples/demo_project/src/: demo_sensor.c  demo_sensor.h  demo_uart.c  demo_uart.h  main.c
tests/: test_scaffolder.py
